--- a/index.html
+++ b/index.html
@@ -272,8 +272,11 @@
     </div>
     <footer class="footer">
       <div class="container">
-        <div class="span12">
-          @osk 2013 . Desarrollado para y durante el <a href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.
+        <div class="row-fluid">
+          <div class="span12">
+            @osk 2013 . Desarrollado para y durante el <a target="_blank" href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.<br/>
+            <a target="_blank" href="http://github.com/argenmap.vis">Repo Github</a>.            
+          </div>
         </div>
       </div>
     </footer>
