corregí paths que apuntaban a olopez.com.ar

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="row-fluid">
         <div class="span6">
           <p class="lead">Este mapa...</p>
-          <iframe style="width:100%" src='http://olopez.com.ar/argenwamp/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
+          <iframe style="width:100%" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
         </div>
         <div class="span6">
           <h3>... a partir de esta spreadsheet</h3>
@@ -254,7 +254,7 @@
                   <p>Copiá este código y pegalo en donde quieras que tu mapa aparezca.<br>
                   </p>
                   <textarea readonly="readonly" style="width: 100%; height: 160px; min-height: 110px; max-height: 300px; resize: none; font-family: Menlo,Monaco,'Courier New',monospace; font-size: 11px;" id="embed-code">
-&lt;iframe src='http://olopez.com.ar/argenwamp/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&amp;height=600' width='600' height='600' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
+&lt;iframe src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&amp;height=600' width='600' height='600' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
                   <div style="margin-top:20px;"><a href="#preview-embed" data-scroll="true" id="iframe-preview-button" class="btn btn-primary">Previsualizar</a>&nbsp;<a href="iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc" target="_blank" id="preview-embed-link" >Link a la previsualización</a></div>
                 </div>
               </div>
@@ -288,7 +288,7 @@
 
             console.log(google_docs_url);
           var iframe = "&lt;iframe src='{url_embed}?source={source}&amp;width={width}&amp;height={height}' width='{width}' height='{height}' frameborder='0'&gt;&lt;/iframe&gt;";
-          var url_embed = 'http://olopez.com.ar/argenwamp/iframe.html';
+          var url_embed = 'http://argenwamp.com.ar/iframe.html';
           if ( google_docs_url) {
             id = $.url(google_docs_url).param('key');
           } else {
@@ -356,7 +356,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42952343-1', 'olopez.com.ar');
+  ga('create', 'UA-42952343-1', 'argenwamp.com.ar');
   ga('send', 'pageview');
 
 </script>
