corregí error en el link al repo github

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="row-fluid">
           <div class="span12">
             @osk 2013 . Desarrollado para y durante el <a target="_blank" href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.<br/>
-            <a target="_blank" href="http://github.com/argenmap.vis">Repo Github</a>.            
+            <a target="_blank" href="http://github.com/oskosk/argenmap.vis">Repo Github</a>.            
           </div>
         </div>
       </div>
