modifiqué el texto sobre el iframe del doc

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
           <iframe style="width:100%" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
         </div>
         <div class="span6">
-          <h3>... a partir de esta spreadsheet</h3>
+          <p class="lead">... a partir de esta spreadsheet</p>
+          
           <iframe style="width:100%" src='https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html' height='350' frameborder='0'></iframe>                
         </div>
       </div> <!--row-->
