metí un bloque más en un section y modifiqué la bajada del título de la página

--- a/index.html
+++ b/index.html
@@ -107,22 +107,24 @@
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp">Web Anamorphic Maps Player</span><br/>
-          <small>Creá un mapa con tus datos usando una <span class="strong">hoja de cálculo </span></small>
+          <small>Creá un mapa para incrustar en tu sitio a partir de una <span class="strong">hoja de cálculo </span></small>
         </h2>
       </div>
     </header>  
     <div class="container">
-      <div class="row-fluid">
-        <div class="span6">
-          <p class="lead">Este mapa...</p>
-          <iframe style="width:100%" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
-        </div>
-        <div class="span6">
-          <p class="lead">... a partir de esta spreadsheet</p>
-          
-          <iframe style="width:100%" src='https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html' height='350' frameborder='0'></iframe>                
-        </div>
-      </div> <!--row-->
+      <section>
+        <div class="row-fluid">
+          <div class="span6">
+            <p class="lead">Este mapa...</p>
+            <iframe style="width:100%" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
+          </div>
+          <div class="span6">
+            <p class="lead">... a partir de esta spreadsheet</p>
+            
+            <iframe style="width:100%" src='https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html' height='350' frameborder='0'></iframe>                
+          </div>
+        </div> <!--row-->
+      </section>
     </div><!--container-->
     <div class="container">
       <section id="descripcion">
