cambié el motto del h1 de index.html y del README.md

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp">Web Anamorphic Maps Player</span><br/>
-          <small>Creá un mapa para incrustar en tu sitio a partir de una <span class="strong">hoja de cálculo </span></small>
+          <small>Creá un mapa de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
       </div>
     </header>  
@@ -120,7 +120,6 @@
           </div>
           <div class="span6">
             <p class="lead">... a partir de esta spreadsheet</p>
-            
             <iframe style="width:100%" src='https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html' height='350' frameborder='0'></iframe>                
           </div>
         </div> <!--row-->
@@ -251,7 +250,7 @@
                     <p>Copiá este código y pegalo en donde quieras que tu mapa aparezca.<br>
                     </p>
                     <textarea readonly="readonly" style="width: 100%; height: 160px; min-height: 110px; max-height: 300px; resize: none; font-family: Menlo,Monaco,'Courier New',monospace; font-size: 11px;" id="embed-code">
-  &lt;iframe src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&amp;height=600' width='600' height='600' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
+&lt;iframe src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&amp;height=600' width='600' height='600' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
                     <div style="margin-top:20px;"><a href="#preview-embed" data-scroll="true" id="iframe-preview-button" class="btn btn-primary">Previsualizar</a>&nbsp;<a href="iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc" target="_blank" id="preview-embed-link" >Link a la previsualización</a></div>
                   </div>
                 </div>
