modifique iframe.html para que avise en el div si no se paso el parametro surce

--- a/iframe.html
+++ b/iframe.html
@@ -67,7 +67,7 @@
       if (source !== undefined) {
         $('#mapa').argenmapvis({source : source});  
       } else {
-        console.log('Se necesita el parámetro source en la URL');
+        $('#mapa').html('Se necesita el parámetro source en la URL');
       }
       
     });
