estética de comments

--- a/iframe.html
+++ b/iframe.html
@@ -25,8 +25,7 @@
       description div */  
       }  
       .wrapper div.description{  
-          position:absolute; /* absolute position (so we can position it where 
-      we want)*/  
+          position:absolute; /* absolute position (so we can position it where we want)*/  
           bottom:0px; /* position will be on bottom */  
           left:0px;  
           top:0px;
