--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
           </h3>
           </div><!--span4-->
           <div class="span8">
+            <div class="alert alert-block">
+              <h4>¿Cómo se publica una spreadshet?</h4>
+              <ul>
+                <li>
+                  En el menú Archivo, seleccioná <em>"Publicar en la Web"</em>.
+                </li>
+                  En la siguiente ventana, tildá la casilla <em>"Volver a publicar automáticamente cuando se realicen los cambios"</em>
+                </li>
+                <li>
+                  Destildá todas las demás casillas.
+                </li>
+                <li>Hacé click en <em>"Iniciar la publicación"</em>. Al hacer esto, 
+                  te da una URL para incrustar la spreadsheet en tu archivo HTML.
+                </li>
+              </ul>
+            </div>
             <div class="row-fluid">
               <div class="span6">
                 <img src="img/publicarenweb.png" />
               </div><!--span6-->
               <div class="span6">
                 <img src="img/codigoembed.png" />
-                <div class="alert alert-block">
-                  <h4>¿Cómo se publica una spreadshet?</h4>
-                  <ul>
-                    <li>
-                      En el menú Archivo, seleccioná <em>"Publicar en la Web"</em>.
-                    </li>
-                      En la siguiente ventana, tildá la casilla <em>"Volver a publicar automáticamente cuando se realicen los cambios"</em>
-                    </li>
-                    <li>
-                      Destildá todas las demás casillas.
-                    </li>
-                    <li>Hacé click en <em>"Iniciar la publicación"</em>. Al hacer esto, 
-                      te da una URL para incrustar la spreadsheet en tu archivo HTML.
-                    </li>
-                  </ul>
-                </div>
               </div><!--span6-->            
             </div>
           </div><!--span8-->
@@ -251,6 +251,7 @@
                     </p>
                     <textarea readonly="readonly" style="width: 100%; height: 160px; min-height: 110px; max-height: 300px; resize: none; font-family: Menlo,Monaco,'Courier New',monospace; font-size: 11px;" id="embed-code">
 &lt;iframe src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&amp;height=600' width='600' height='600' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
+                    <hr/>
                     <div style="margin-top:20px;"><a href="#preview-embed" data-scroll="true" id="iframe-preview-button" class="btn btn-primary">Previsualizar</a>&nbsp;<a href="iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc" target="_blank" id="preview-embed-link" >Link a la previsualización</a></div>
                   </div>
                 </div>
@@ -276,7 +277,7 @@
         <div class="row-fluid">
           <div class="span12">
             @osk 2013 . Desarrollado para y durante el <a target="_blank" href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.<br/>
-            <a target="_blank" href="http://github.com/oskosk/argenwamp">Repo Github</a>.            
+            <a target="_blank" href="http://github.com/oskosk/argenwamp">Repo en Github</a>.            
           </div>
         </div>
       </div>
