--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=News+Cycle:400,700|Merriweather:400,300,700">    
+    <link rel="shortcut icon" href="img/ico/favicon.png">
     <style type="text/css">
       .hero-unit h1 {
         font-family: 'News Cycle',sans-serif;
@@ -77,7 +78,7 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="http://www.ign.gob.ar/argenmap/argenmap.jquery/argenmap.jquery.js"></script>
     <script type="text/javascript">
-   
+
     </script>
   </head>
 
@@ -103,7 +104,7 @@
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp">Web Anamorphic Maps Player</span><br/>
-          <small>Creá un mapa de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
+          <small>Creá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
       </div>
     </header>  
@@ -111,13 +112,12 @@
       <section>
         <div class="row-fluid">
           <div class="span12">
-            <p class="lead">Este mapa...</p>
-            <iframe style="width:100%" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
+            <p >Este mapa, a partir de <a target="_blank" href="">esta spreadsheet.</a></p>
+            <iframe style="width:100%;border:1px dashed #ccc" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
         </div>
         <div class="row-fluid">          
           <div class="span12">
-            <p class="lead">... a partir de esta spreadsheet</p>
             <iframe style="width:100%" src='https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html' height='350' frameborder='0'></iframe>                
           </div>
         </div> <!--row-->
@@ -130,11 +130,47 @@
         </div>
         <p class="lead">
           ArgenWamp es una herramienta open source que te permite construir mapas con datos
-          guardados en una Google Spreadsheet. Podés incrustar el mapa en tu web o compartir el link. 
+          guardados en una Google Spreadsheet.
         </p>
-         <p>
-            <strong>Este mapa va a estar siempre online</strong> tengas o no servidor porque se basa en la infraestructura de Google Docs.
-        </p>
+         <ul>
+            <li><strong>Este mapa va a estar siempre online</strong> tengas o no servidor porque se basa en la infraestructura de Google Docs.</li>
+            <li>Podés incrustar el mapa en tu web o compartir el link</li>.
+        </ul>
+        <h3><em>Criteria</em></h3>
+        <ul>
+          <li>
+          Muchas personas están acostumbradas a las planillas de cálculo como estructuras
+          de datos.
+          </li>
+          <li>
+            El código de esta herramienta consume JSON.
+          </li>
+          <li>
+            Google Ofrece por cada documento publicado una url con el documento JSON que representa
+          al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON
+          de otra fuente
+          </li>
+          <li>
+            <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes
+            del mundo en este tipo de mapas.
+          </li>
+          <li>
+             Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
+           </li>
+          <li>
+            Guardar una línea en una spreadsheet que hace
+            referencia a esa servicio ya publicado no estamos guardando "datos"
+            en Google.
+          </li>
+          <li>
+            Acerca los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas
+            que el manejo del una planilla de cálculos y una cuenta de Google. 
+          </li>
+          <li>
+            Esta herramienta está construída como 2 html y una plugin de jquery. que
+            interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript)
+          </li>
+        </ul>
         <div class="row-fluid">
           <div class="span6">
             <p>
