--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -116,11 +114,6 @@
             <iframe style="width:100%;border:1px dashed #ccc" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
         </div>
-        <div class="row-fluid">          
-          <div class="span12">
-            <iframe style="width:100%" src='https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html' height='350' frameborder='0'></iframe>                
-          </div>
-        </div> <!--row-->
       </section>
     </div><!--container-->
     <div class="container">
@@ -158,12 +151,7 @@
              Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
            </li>
           <li>
-            Guardar una línea en una spreadsheet que hace
-            referencia a esa servicio ya publicado no estamos guardando "datos"
-            en Google.
-          </li>
-          <li>
-            Acerca los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas
+            Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas
             que el manejo del una planilla de cálculos y una cuenta de Google. 
           </li>
           <li>
