--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>ArgenWAMP</title>
+    <title>ArgenWAMP - Mapas de Argentina a partir de una hoja de cálculo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="ArgenWAMP - Mapas de Argentina a partir de una hoja de cálculo">
+    <meta name="author" content="osk">
 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=News+Cycle:400,700|Merriweather:400,300,700">    
