cambié un texto para que al compartir el link en facebook, sea esto lo que sale y saqué mucho padding del hero-unit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=News+Cycle:400,700|Merriweather:400,300,700">    
     <link rel="shortcut icon" href="img/ico/favicon.png">
     <style type="text/css">
+      .hero-unit {
+        padding: 5px;
+      }
       .hero-unit h1 {
         font-family: 'News Cycle',sans-serif;
         text-rendering: optimizelegibility;        
@@ -187,7 +190,7 @@
           </div><!--span4-->
           <div class="span8">
             <p>
-              Creá una nueva spreadsheet usando la plantlla. Es tan simple como completar campos de título, ubicación y URLs en las columnas apropiadas.            
+              Creá un nuevo mapa usando la plantlla. Es tan simple como completar campos de título, ubicación y/o URLs en las columnas apropiadas.            
             </p>
             <p>
               <a target="_blank" class="btn btn-primary" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">Plantilla de Google Spreadsheet &raquo;</a>
