cambié p por ul en la lista de los formatos que soporta

--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
             <p>
               Puede traer datos de múltiples fuentes y soporta:
             </p>
-            <p>
-              WMS, KML, Marcadores, Geocoding (basado en nominatim de OpenStreetMap).
-            </p>
+            <ul>
+              <li>Capas WMS</li>
+              <li>Capas KML</li>
+              <li>Marcadores a partir de coordenadas o Geocoding (basado en nominatim de OpenStreetMap).</li>
+            </ul>
           </div>
           <div class="span6">
           </div>          
