el href de 'esta plantilla' estaba en blanco

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <section>
         <div class="row-fluid">
           <div class="span12">
-            <p >Este mapa, a partir de <a target="_blank" href="">esta spreadsheet.</a></p>
+            <p >Este mapa, a partir de <a target="_blank" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">esta spreadsheet.</a></p>
             <iframe style="width:100%;border:1px dashed #ccc" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
         </div>
