agregué botón que lleva al generador de mapa

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         font-family: 'News Cycle',sans-serif;
         text-rendering: optimizelegibility;        
       }
-      .hero-unit  {
+      .hero-unit h2 {
         font-family: 'Merriweather',serif !important;        
         text-rendering: optimizelegibility;
       }
@@ -110,6 +110,7 @@
         <h2><span class="wamp">Web Anamorphic Maps Player</span><br/>
           <small>Creá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
+        <a href="#generator" class="btn btn-large btn-success">Creá tu mapa ahora &raquo;</a>
       </div>
     </header>  
     <div class="container">
@@ -316,7 +317,7 @@
           <div class="span12">
             @osk 2013 . Desarrollado para y durante el <a target="_blank" href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.<br/>
             <a target="_blank" href="http://github.com/oskosk/argenwamp">Repo en Github</a>.            
-          </div>
+          </div>  
         </div>
       </div>
     </footer>
