--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
-        <h2><span class="wamp">Web Anamorphic Maps Player</span><br/>
+        <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
           <small>Creá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
         <a href="#generator" class="btn btn-large btn-success">Creá tu mapa ahora &raquo;</a>
@@ -164,7 +164,7 @@
           <li>
             Google Ofrece por cada documento publicado una url con el documento JSON que representa
           al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON
-          de otra fuente
+          de otra fuente.
           </li>
           <li>
             <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes
@@ -251,7 +251,7 @@
             </small>
             </h3>          
             <p>
-              Luego agarrá el código para incrustar y copialo en tu sitio en donde quieras que el mapa aparezca (tal cual como
+              Después de copiar la URL que google te da, podés copiar el código para incrustar en tu sitio (tal cual como
               harías para incrustar un video de Youtube por ejemplo).
             </p>
           </div><!--span4-->
