agregué favicon a iframe.html

--- a/iframe.html
+++ b/iframe.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="shortcut icon" href="img/ico/favicon.png">
     <style type="text/css">
       html,body,.wrapper, #mapa {
         margin:0;
@@ -40,6 +40,8 @@
       .wrapper div.description_content{  
           padding:10px;  
       }  
+
+      
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
