--- a/iframe.html
+++ b/iframe.html
@@ -4,7 +4,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>ArgenWamp iframe</title>
+    <title>ArgenWamp - Mapa Incrustable</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -41,7 +41,7 @@
           padding:10px;  
       }  
 
-      
+
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
