--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
     <div class="container-fluid">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="#descripcion">Descripción</a></li>
-            <li><a href="#generator">Creá tu mapa</a></li>
-            
-          </ul>
+          <li class="active"><a href="#descripcion">Descripción</a></li>
+          <li><a href="#generator">Creá tu mapa</a></li>
+          <li><a href="#ejemplos">Ejemplos</a></li>            
+        </ul>
       </div>
     </div>
     <header  style="display:none" class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
@@ -310,6 +310,51 @@
           </div>
         </div>
       </section>
+      <section id="ejemplos">
+        <div class="page-header">
+          <h2>Ejemplos</h2>
+        </div>        
+        <div class="row-fluid" >
+          <ul class="thumbnails">
+            <li class="span3">
+              <div class="thumbnail">
+                <img alt="preview del mapa de unundaciones en La Plata de Abril 2013" style="width: 300px; height: 200px;" src="img/ejemplos/inundacioneslaplata.jpg">
+                <div class="caption">
+                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdEk2WWZXNzNVQWN6RzhsY0x0eG0yUVE">Inundaciones La Plata</a></h4>
+                  <p>Combina dos capas WMS de imágenes satelitales y archivos KML.</p>
+                </div>
+              </div>
+            </li>
+            <li class="span3">
+              <div class="thumbnail">
+                <img alt="preview de mapa con distribución de pueblos originarios en Argentina" style="width: 300px; height: 200px;" src="img/ejemplos/pueblosoriginarios.jpg">
+                <div class="caption">
+                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFB6b3lyRzFCZ0xwODRGS0VMQW9TNGc">Pueblos originarios</a></h4>
+                  <p>Usa un KML online que proviene desde el servidor de mapas de Mapa Educativo.</p>
+                </div>
+              </div>
+            </li>            
+            <li class="span3">
+              <div class="thumbnail">
+                <img alt="preview de mapa con anuncios de delito" style="width: 300px; height: 200px;" src="img/ejemplos/delitos.jpg">
+                <div class="caption">
+                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AnwT7fFVm7qsdHhvLVNVN3pRWFM3ZVVOQ19rZ2trUGc">Anuncios de delitos en vivo</a></h4>
+                  <p>Combina dos recursos JSON online, de denuncias y de comisarías, tomados por un script incluído en la spreadsheet.</p>                  
+                </div>
+              </div>
+            </li>
+            <li class="span3">
+              <div class="thumbnail">
+                <img alt="preview de mapa con datos de INTA" style="width: 300px; height: 200px;" src="img/ejemplos/cuencasinta.jpg">
+                <div class="caption">
+                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdHZkZUc5cHlyVVdlZW1EVy16NWV3MUE">Cuencas hídricas según INTA</a></h4>
+                  <p>Muestra una capa WMS de cuencas hídricas proveniente del Instituto Nacional de Tecnología Agropecuaria.</p>                  
+                </div>
+              </div>
+            </li>              
+          </ul>
+        </div>
+      </section>      
     </div>
     <footer class="footer">
       <div class="container">
