--- a/index.html
+++ b/index.html
@@ -313,12 +313,13 @@
       <section id="ejemplos">
         <div class="page-header">
           <h2>Ejemplos</h2>
-        </div>        
+        </div>
+        <h3>Estos son algunos ejemplos simples creados con argenwamp</h3>
         <div class="row-fluid" >
           <ul class="thumbnails">
             <li class="span3">
               <div class="thumbnail">
-                <img alt="preview del mapa de unundaciones en La Plata de Abril 2013" style="width: 300px; height: 200px;" src="img/ejemplos/inundacioneslaplata.jpg">
+                <img alt="preview del mapa de unundaciones en La Plata de Abril 2013"  src="img/ejemplos/inundacioneslaplata.jpg">
                 <div class="caption">
                   <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdEk2WWZXNzNVQWN6RzhsY0x0eG0yUVE">Inundaciones La Plata</a></h4>
                   <p>Combina dos capas WMS de imágenes satelitales y archivos KML.</p>
@@ -327,7 +328,7 @@
             </li>
             <li class="span3">
               <div class="thumbnail">
-                <img alt="preview de mapa con distribución de pueblos originarios en Argentina" style="width: 300px; height: 200px;" src="img/ejemplos/pueblosoriginarios.jpg">
+                <img alt="preview de mapa con distribución de pueblos originarios en Argentina"  src="img/ejemplos/pueblosoriginarios.jpg">
                 <div class="caption">
                   <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFB6b3lyRzFCZ0xwODRGS0VMQW9TNGc">Pueblos originarios</a></h4>
                   <p>Usa un KML online que proviene desde el servidor de mapas de Mapa Educativo.</p>
@@ -336,7 +337,7 @@
             </li>            
             <li class="span3">
               <div class="thumbnail">
-                <img alt="preview de mapa con anuncios de delito" style="width: 300px; height: 200px;" src="img/ejemplos/delitos.jpg">
+                <img alt="preview de mapa con anuncios de delito"  src="img/ejemplos/delitos.jpg">
                 <div class="caption">
                   <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AnwT7fFVm7qsdHhvLVNVN3pRWFM3ZVVOQ19rZ2trUGc">Anuncios de delitos en vivo</a></h4>
                   <p>Combina dos recursos JSON online, de denuncias y de comisarías, tomados por un script incluído en la spreadsheet.</p>                  
@@ -345,7 +346,7 @@
             </li>
             <li class="span3">
               <div class="thumbnail">
-                <img alt="preview de mapa con datos de INTA" style="width: 300px; height: 200px;" src="img/ejemplos/cuencasinta.jpg">
+                <img alt="preview de mapa con datos de INTA"  src="img/ejemplos/cuencasinta.jpg">
                 <div class="caption">
                   <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdHZkZUc5cHlyVVdlZW1EVy16NWV3MUE">Cuencas hídricas según INTA</a></h4>
                   <p>Muestra una capa WMS de cuencas hídricas proveniente del Instituto Nacional de Tecnología Agropecuaria.</p>                  
