--- a/index.html
+++ b/index.html
@@ -96,14 +96,7 @@
         </ul>
       </div>
     </div>
-    <header  style="display:none" class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
-      <div class="container-fluid text-center">
-        <h1>Argenmap<span class="Vis">Vis</span><br/>
 
-          <small>Creá un mapa con tus datos a partir de una <span class="strong">spreadsheet</span></small>
-        </h1>
-      </div>
-    </header>
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
@@ -118,7 +111,7 @@
         <div class="row-fluid">
           <div class="span12">
             <p >Este mapa, a partir de <a target="_blank" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">esta spreadsheet.</a></p>
-            <iframe title="mapa creado con argenwamp" style="width:100%;border:1px dashed #ccc" src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
+            <iframe title="mapa creado con argenwamp" style="width:100%;border:1px dashed #ccc" src='iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
         </div>
       </section>
